# ArchiveFetcher

./: .gitignore  README.md  pyproject.toml  setup.cfg
rusarchives_fetcher/: cfc_rusarchives.py  rusarchives.py  rusarchives_fetcher.py  temples.py  utils.py
