[tool.poetry]
name = "rusarchives_fetcher"
version = "0.1.0"
description = "Script to fetch data from rusarchives.ru"
authors = ["Artiom Khandamirov <t9max@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Click = "^7.1.2"
requests-html = "^0.10.0"
pyexcel = "^0.6.6"
pyexcel-xlsx = "^0.6.0"
aiohttp = {extras = ["speedups"], version = "^3.7.4"}
orjson = "^3.5.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
flake8-docstrings = "^1.5.0"
flake8-bandit = "^2.1.2"
flake8-deprecated = "^1.3"
flake8-awesome = "^1.3.0"
autopep8 = "^1.5.3"
rope = "^0.17.0"
mypy = "^0.782"
isort = "^5.6.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
