[tool.poetry]
name = "rusarchives_fetcher"
version = "0.1.0"
description = "Script to fetch data from rusarchives.ru"
authors = ["Artiom Khandamirov <t9max@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.1"
Click = "^7.1.2"
requests-html = "^0.10.0"
pyexcel = "^0.6.6"
pyexcel-xlsx = "^0.6.0"
aiohttp = {extras = ["speedups"], version = "^3.7.4"}
orjson = "^3.5.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
autopep8 = "^2.0.2"
rope = "^1.9.0"
isort = "^5.12.0"
mypy = "^1.5.1"
flake8-bandit = "^4.1.1"
flake8-docstrings = "^1.7.0"
flake8-deprecated = "^2.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
